testdata/baselines/reference/submodule/compiler/jsxExcessPropsAndAssignability.errors.txt
jsxExcessPropsAndAssignability.tsx(3,24): error TS2307: Cannot find module 'react' or its corresponding type declarations.


==== jsxExcessPropsAndAssignability.tsx (1 errors) ====
    /// <reference path="/.lib/react16.d.ts" />
    
    import * as React from 'react';
                           ~~~~~~~
!!! error TS2307: Cannot find module 'react' or its corresponding type declarations.
    
    const myHoc = <ComposedComponentProps extends any>(
        ComposedComponent: React.ComponentClass<ComposedComponentProps>,
    ) => {
        type WrapperComponentProps = ComposedComponentProps & { myProp: string };
        const WrapperComponent: React.ComponentClass<WrapperComponentProps> = null as any;
    
        const props: ComposedComponentProps = null as any;
    
        <WrapperComponent {...props} myProp={'1000000'} />;
        <WrapperComponent {...props} myProp={1000000} />;
    };
    